2013-04-21 Sarka Todorova <sarka.todorova@cern.ch>
	* bugfix in the identification loop of TGC stations
	* tagged as MuonTrackingGeometry-00-05-53

2013-04-19 Sarka Todorova <sarka.todorova@cern.ch>
	* bugfix in the identification loop of NSW stations - fixes the clean-up of NSW stations, too
	* tagged as MuonTrackingGeometry-00-05-52 

2013-04-17 Sarka Todorova <sarka.todorova@cern.ch>
	* NSW layer identification
	* NSW station delete crashing in the finalization - commented for the moment
	* tagged as MuonTrackingGeometry-00-05-51 

2013-03-07 Sarka Todorova <sarka.todorova@cern.ch>
	* more flexibility for NSW layout 
	* tagged as MuonTrackingGeometry-00-05-50 

2013-03-07 Sarka Todorova <sarka.todorova@cern.ch>
	* NSW envelopes + temporary layer identification ( does not use identifiers yet ) 
	* tagged as MuonTrackingGeometry-00-05-49 

2013-02-27 Sarka Todorova <sarka.todorova@cern.ch>
	* first NSW import - no channel identification yet 
	* tagged as MuonTrackingGeometry-00-05-48 

2013-02-11 Sarka Todorova <sarka.todorova@cern.ch>
	* add python builder configuration 
	* tagged as MuonTrackingGeometry-00-05-47 

2012-07-27 Felix Rauscher
	* CLHEP 2.x
	* propdel svn:executable
	* tagged as MuonTrackingGeometry-00-05-46

2012-05-11 Sarka Todorova <sarka.todorova@cern.ch>
	* outer radius increased to 13400 mm, half-length becomes 26050 mm 
	* to take into account new (inert) material 
	* tagged as MuonTrackingGeometry-00-05-45 

2012-04-26 Sarka Todorova <sarka.todorova@cern.ch>
	* outer radius increased to 13010 mm 
	* tagged as MuonTrackingGeometry-00-05-44 

2011-12-01 Sarka Todorova <sarka.todorova@cern.ch>
	* merged with branch MuonTrackingGeometry-00-05-40-02
	* tagged as MuonTrackingGeometry-00-05-43 

2011-11-08 Sarka Todorova <sarka.todorova@cern.ch>
	* suppress (unused) MsgStream instantiations
	* tagged as MuonTrackingGeometry-00-05-42 

2011-10-11 Sarka Todorova <sarka.todorova@cern.ch>